feature: better perfo
